Use padding-bottom hack to prevent layout jump on donut chart load

--- a/src/stylesheets/molecules/_legend.scss
+++ b/src/stylesheets/molecules/_legend.scss
@@ -12,7 +12,7 @@
 
   &--donut {
     display: inline-block;
-    margin-top: 0.5em;
+    margin-top: 1em;
     column-count: 2;
   }
 
